cleanup: remove creditsUsed
